<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical">

    <include
        android:id="@+id/header"
        layout="@layout/layout_header"/>

    <LinearLayout
        android:orientation="vertical"
        android:paddingHorizontal="16dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <com.google.android.material.textfield.TextInputLayout
            android:layout_marginTop="30dp"
            android:id="@+id/input_email"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/hint_email">

            <com.google.android.material.textfield.TextInputEditText
                android:focusable="true"
                android:maxLines="1"
                android:inputType="textEmailAddress"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"/>

        </com.google.android.material.textfield.TextInputLayout>

        <LinearLayout
            android:layout_marginTop="8dp"
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/input_code"
                android:layout_width="0dp"
                android:layout_weight="1"
                android:layout_height="wrap_content"
                android:hint="@string/hint_code">

                <com.google.android.material.textfield.TextInputEditText
                    android:maxLines="1"
                    android:maxLength="6"
                    android:imeOptions="actionDone"
                    android:inputType="number"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.button.MaterialButton
                android:id="@+id/btn_get_code"
                android:layout_gravity="center_vertical"
                app:cornerRadius="6dp"
                android:text="@string/get_code"
                android:insetBottom="0dp"
                android:layout_marginStart="10dp"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"/>

        </LinearLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btn_login"
            android:height="60dp"
            android:layout_marginTop="30dp"
            android:text="@string/login"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <TextView
            android:layout_gravity="end"
            android:layout_marginTop="10dp"
            android:text="@string/sign_tips"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

    </LinearLayout>

</LinearLayout>